# educalo

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: rpi_pico2_rp2350a_m33.overlay  rpi_pico2_rp2350a_m33_w.overlay  wv_rp2350_pizero_rp2350b_m33.overlay
drivers/sensor/: Kconfig
drivers/sensor/custom/: CMakeLists.txt  Kconfig
drivers/sensor/custom/ads1115sensor/: CMakeLists.txt  Kconfig  ads1115.c
drivers/zephyr/sensor/ti/ads1115sensor/: ads1115sensor.c  ads1115sensor.h
dts/bindings/sensor/: custom,ads1115sensor.yml
include/: app_info.h  calo_time.h  filesystem.h  leds_interface.h  processing_thread.h  sensor_thread.h  toggle_measurement.h  zbus_channels.h
include/interface/: init.h  leds.h  shell.h
include/measure/: toggle.h
src/: app_info.c  calo_time.c  datalogger_thread.c  filesystem.c  filesystem.cpp  health_check.c  health_check.cpp  leds_interface.c  main.c  main.cpp  processing_thread.c  sensor_thread.c  toggle_measurement.c  zbus_channels.c
src/interface/: init.c  leds.c  shell.c
src/measure/: datalogger.c  datalogger.cpp  sensor.cpp  toggle.cpp
